fix warning indicator sneaking out of boundary

--- a/src/components/environments-summary/style.css
+++ b/src/components/environments-summary/style.css
@@ -64,3 +64,7 @@
   line-height: 1.333em;
   font-weight: 500;
 }
+
+.env_card-indicator--warning {
+  margin-bottom: 3px;
+}
